--- a/index.html
+++ b/index.html
@@ -207,12 +207,13 @@
 
     <div id="sort">
         <div>
-            <span style="color: blue">■</span> Reads: <span id="reads">0</span> |
-            <span style="color: yellow">■</span><span style="color: red">■</span><span style="font-size: 10px"></span> Writes: <span id="writes">0</span>
+            <span style="color: blue">■</span> Reads: <span id="reads" style="font-variant-numeric: tabular-nums; font-family: 'Courier New', Courier, monospace; font-weight: 600">0</span> |
+            <span style="color: yellow">■</span><span style="color: red">■</span><span style="font-size: 10px"></span> Writes: <span id="writes" style="font-variant-numeric: tabular-nums; font-family: 'Courier New', Courier, monospace;  font-weight: 600">0</span>
             <button onclick="resetStats()" class="btn btn-danger" style="height: 20px; font-size: 11px; padding: 0 4px; margin: 0 5px">
                 Reset
             </button>
         </div>
+
         <div id="sortArea">
 
         </div>
