--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
         <h3>Eigener Algorithmus:</h3>
 
-        <textarea id="code" name="code">
+        <label for="code">JavaScript</label><textarea id="code" name="code">
 //Anleitung:
 //Verwenden Sie die gegebenen Funktionen, um die Balken zu animieren
 //Die gegebenen Funktionen benötigen ein await, um die Animation zu verzögern
