--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ mySort();</textarea>
                 var n = array.length;
                 var code = editor.getValue();
                 try {
-                    eval(code);
+                    await eval(code);
                 } catch (e) {
                     console.error(e);
                     alert('Error: ' + e.message);
@@ -1322,7 +1322,7 @@ function flip(array, i){
     </div>
 
     <footer style="background-color: #f2f3f4; padding: 20px; text-align: center; margin-top: 20px;">
-        <p>&copy; 2024 Leon Rabe. Alle Rechte vorbehalten.</p>
+        <p>2024 Leon Rabe. Schülerprojekt</p>
         <p>
             <a href="https://leonlp9.github.io/PrivatLinkTree/">Kontakt</a> |
             <a href="https://github.com/Leonlp9/Sortieralgorithmen" target="_blank">Github Repository</a>
